objects/ASI_CRM_CN_Ctr_Not_Approved_Daily_Count__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Number_of_Contract__c</fullName>
        <label>Number of Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract (CN) Not Approved Daily Count</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_Date__c</columns>
        <columns>ASI_CRM_CN_Number_of_Contract__c</columns>
        <columns>ASI_CRM_CN_Submitted_By__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract (CN) Not Approved Daily Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>